--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-DISCORD_TOKEN=your_token_here
-CLIENT_ID=your_client_id_here
-GUILD_ID=your_guild_id_here
+# Your Bot Token (Discord Developer Portal -> Bot -> Token)
+DISCORD_TOKEN=
+
+# App ID (General Information -> Application ID)
+CLIENT_ID=
+
+# Server ID for Dev/Testing (Right click server icon -> Copy ID)
+GUILD_ID=
